# linuxtrack

./: .gitignore  CMakeLists.txt  HANDOFF.md  LAL_FEASIBILITY.md  MODERNIZATION_ROADMAP.md  README  README.md  config.h.cmake  config.status  configure.ac  configure~  libtool  pref_flex.h
.agent/workflows/: critical-rules.md
.github/workflows/: build.yml
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2
packaging/appimage/: AppRun  make_appimage.sh
src/: CMakeLists.txt  Makefile  Makefile.am  cal.c  com_proc.c  com_proc.h  facetrack.cpp  game_data.c  image_process.c  joy.c  joy.lo  lex.yy.c  libfacetrack_int.la  libfacetrack_int_la-facetrack.lo  libfakeusb.la  libfakeusb_la-fakeusb.lo  libfakeusb_la-sn3_model.lo  libfakeusb_la-sn4_model.lo  libfakeusb_la-tir4_model.lo  libfakeusb_la-tir_model.lo  libft.la  libft_la-facetrack.lo  libft_la-runloop.lo  libft_la-webcam_driver.lo  libjoy.la  liblinuxtrack.la  liblinuxtrack32.la  liblinuxtrack32_la-ipc_utils.lo  liblinuxtrack32_la-ltlib.lo  liblinuxtrack32_la-utils.lo  liblinuxtrack_int.la  liblinuxtrack_la-ipc_utils.lo  liblinuxtrack_la-ltlib.lo  liblinuxtrack_la-utils.lo  libltr.la  libltr_la-axis.lo  libltr_la-cal.lo  libltr_la-com_proc.lo  libltr_la-dyn_load.lo  libltr_la-image_process.lo  (+74 more)
src/.libs/: libfacetrack_int.la  libfakeusb.la  libfakeusb.lai  libfakeusb.so.0.0.0  libfakeusb.so.0.0.0T  libft.lai  libft.so.0.0.0  libft.so.0.0.0T  libjoy.lai  libjoy.so.0.0.0  liblinuxtrack.lai  liblinuxtrack.so.0.0.0  liblinuxtrack32.la  liblinuxtrack32.lai  liblinuxtrack32.so.0.0.0  liblinuxtrack_int.la  libltr.expsym  libltr.lai  libltr.so.0.0.0  libltusb1.lai  libltusb1.so.0.0.0  libltusb1.so.0.0.0T  libmacwii.la  libmacwii.lai  libmacwii.so.0.0.0  libmacwii.so.0.0.0T  libmacwii.ver  libp3e.la  libp3e.lai  libp3e.so.0  libp3e.so.0.0.0  libp3e.so.0.0.0T  libp3e.ver  libp3eft.la  libp3eft.lai  libp3eft.so.0.0.0  libp3eft.so.0.0.0T  libtir.lai  libtir.so.0.0.0  libtir.so.0.0.0T  (+14 more)
src/ltr_hotkey_gui/: CMakeLists.txt  ltr_hotkey_gui.cpp  ltr_hotkey_gui.h  main.cpp
src/mac/: Makefile  macwebcam.c  processing.c  qt_camera.m
src/mickey/: CMakeLists.txt  Makefile  help.qch  help.qhc  keyb.cpp  keyb_x11.cpp  keyb_x11.h  main.cpp  mickey.cpp  mickey.h  mickey.pro  mickey.pro.in  moc_predefs.h  mouse_linux.cpp  mouse_mac.cpp  my_line_edit.cpp  transform.cpp
src/osc_server_mac/: Makefile
src/qt_gui/: CMakeLists.txt  Makefile  buffering.cpp  device_setup.cpp  device_setup.h  dlfirmware.cpp  downloading.cpp  extractor.cpp  extractor.h  (+52 more)
(+28 files in other folders)
